@@ -285,7 +285,9 @@ final class WebViewCore {
         int fileType = MediaFile.getFileTypeForMimeType(mimeType);
         return MediaFile.isAudioFileType(fileType)
             || MediaFile.isVideoFileType(fileType)
-            || MediaFile.isPlayListFileType(fileType);
+            || MediaFile.isPlayListFileType(fileType)
+            // The following is not in Media framework, but it's supported.
+            || (mimeType != null && mimeType.startsWith("video/m4v"));
     }
 
     /**
@@ -2054,7 +2056,7 @@ final class WebViewCore {
         }
         if (mWebView != null) {
             Message msg = Message.obtain(mWebView.mPrivateHandler,
-                    WebView.SCROLL_BY_MSG_ID, dx, dy, new Boolean(animate));
+                    WebView.SCROLL_BY_MSG_ID, dx, dy, Boolean.valueOf(animate));
             if (mDrawIsScheduled) {
                 mEventHub.sendMessage(Message.obtain(null,
                         EventHub.MESSAGE_RELAY, msg));
